# ContextShield-Team-Ctrl

./: .dockerignore  .gitignore  Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt  space.yaml  test_out.txt
.hypothesis/examples/47fffca8dfdd91a0/: 062c9fb38b51020b  180d602ce28cc7bc  19565d7688da6e7a  1d4a51371c6dd902  1e7e89a4cd5aba57  25971774738d72f1  28c3667dc99321ed  33154d0173989399  35b80fd45b4234d3  37d42b2de3f6770b  388dafdd24a73490  3c87760fe073715f  410b17a79e8b1432  4658b7a730e25ce1  656ab3576368caa4  694c8a071ccf656c  76c52adcdf0becc6  7ca2bc85e4330e9d  80b95b3270673240  88952a4966b22801  9735843b348b2581  99635fc6f96c5a72  9c4093b39e6ff92e  9d731b1261e83ef9  9d95db0bce853d89  9e012c495d2e7b34  9e5b1f57302ee716  a29c7b1191904614  a344cc235829eae0  aacb194e7cb44082  ab3e75cb0734b5cb  b1f755c7bc0e2167  b393c4cdd64ea8c8  b9ffc1f72f51b6b8  bb9e1d6526c20dfa  be49ff15abe17fe6  (+7 more)
.hypothesis/tmp/: tmp0agtpbvz  tmp32xvy3s4  tmpf5ojp2oy  tmpgx3kri5i  tmpj9vyp4g_  tmpmojgudvt  tmpncn353vb  tmpogihpgnm  tmpqxkzha2e  tmpw3a1u8h2
env/: environment.py  exceptions.py  openenv_adapter.py  reward.py  state.py
graders/: __init__.py  base.py  easy.py  hard.py  medium.py  patch_grader.py  unit_grader.py
models/: __init__.py  action.py  observation.py  reward.py  state.py  task.py
scripts/: oracle_smoke.py
server/: app.py
tasks/: task_pool.py
tasks/data/: easy.json  hard.json  medium.json
tests/: test_environment.py  test_graders.py  test_inference.py  test_models.py  test_reward.py  test_task_data.py  test_task_pool.py
(+1 files in other folders)
